# piper-plus-3

./: .dockerignore  .gitattributes  .gitignore  .ruffignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_MODELS.md  Dockerfile  Package.swift  README.md  pyproject.toml  pytest.ini
examples/c-api/: CMakeLists.txt  Makefile  README.md  basic.c  multi_language.c  streaming.c
src/cpp/tests/: CMakeLists.txt  test_c_api.cpp  test_c_api_audio_regression.cpp  test_c_api_integration.cpp  test_custom_dictionary.cpp  test_dictionary_manager.cpp  test_download_utils.cpp  test_gpu_device_id.cpp  test_library_path.cpp  test_model_manager.cpp  test_model_speaker_detection.cpp  test_multilingual_g2p.cpp  test_n_variants.cpp  test_openjtalk_error_handling.cpp  test_openjtalk_optimized.cpp  test_openjtalk_security.cpp  test_phoneme_parser.cpp  test_phoneme_timing.cpp  test_phonemize.cpp  test_prosody_inference.cpp  test_question_markers.cpp  test_short_text_mitigation.cpp  test_split_sentences.cpp  test_streaming.cpp  test_streaming_raw_phonemes.cpp  test_streaming_simple.cpp  test_swedish_phonemize.cpp  test_text_input.cpp
src/piper_phonemize_bundled/: MANIFEST.in  README.md  build_dependencies.py  create_python_stub.py  download_prebuilt.py  prepare_sources.py  pyproject.toml  setup.py  setup_dummy.py  setup_minimal.py  setup_python_only.py  setup_windows.py
src/piper_phonemize_bundled/piper_phonemize/: __init__.py  __init__stub.py
src/python/: check_environment.py  jp_phoneme_map.py  prepare_css10_japanese.py  pyproject.toml  pytest.ini  test_phoneme_mapping.py  train_config_japanese.json  update_test_model.py
src/python/docs/: integrated-components-ja.md
src/python/g2p/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
src/python/g2p/benchmarks/: bench_g2p.py
src/python/g2p/piper_plus_g2p/: __init__.py  base.py  chinese.py  custom_dict.py  english.py  french.py  japanese.py  korean.py  multilingual.py  portuguese.py  registry.py  spanish.py  ssml.py  swedish.py
src/python/g2p/tests/: conftest.py  test_base.py  test_chinese.py  test_compat.py  test_cross_platform.py  test_custom_dict.py  test_e2e.py  test_edge_cases.py  test_encode.py  test_encoder.py  test_english.py  test_french.py  test_japanese.py  test_korean.py  test_language_code.py  test_multilingual.py  test_portuguese.py  test_pua_invariants.py  test_registry.py  test_segment_text.py  test_snapshots.py  test_spanish.py  test_ssml.py  test_strict_mode.py  test_swedish.py
src/python/g2p/tools/: generate_golden.py
src/python/piper_plus/: __init__.py  _model_resolver.py  api.py  audio.py  engine.py
src/python/piper_train/: __main__.py  _resources.py  clean_cached_audio.py  export_generator.py  export_onnx.py  export_onnx_streaming.py  export_torchscript.py  f0_extraction.py  filter_utterances.py  infer.py  infer_generator.py  infer_onnx.py  infer_onnx_streaming.py  infer_torchscript.py  model_manager.py  ort_utils.py  preprocess.py  update_model_config.py  voice_conversion.py
src/python/piper_train/norm_audio/: __init__.py  trim.py  vad.py
src/python/piper_train/speaker_encoder/: __init__.py  audio_utils.py  ecapa_tdnn.py  encoder.py  evaluate.py  export_encoder.py
src/python/piper_train/tools/: add_prosody_features.py  convert_fp16.py  convert_nst_dictionary.py  prepare_bilingual_dataset.py  prepare_multilingual_dataset.py
src/python/piper_train/vits/: attentions.py  commons.py  config.py  dataset.py  ema.py  lightning.py  losses.py  mb_istft.py  mel_processing.py  models.py  modules.py  onnx_attention.py  stft_loss.py  stft_onnx.py  transforms.py  utils.py  wavfile.py
src/python/piper_wyoming/: __init__.py  __main__.py  handler.py
src/python/scripts/: setup.sh
src/python/tests/: conftest.py  test_add_prosody_features.py  test_audio_result.py  test_build_infer_forward.py  test_convert_fp16.py  test_custom_dict.py  test_dataset_getitem.py  test_ddp_strategy.py  test_english_phonemizer.py  test_export_onnx.py  test_export_onnx_mb_istft.py  test_freeze_dp.py  test_infer_onnx.py  test_infer_onnx_config.py  test_integration.py  test_intersperse_padding.py  test_main_mb_istft.py  test_mb_istft_generator.py  test_mb_istft_utilities.py  test_model_config.py  test_model_manager.py  test_model_resolver.py  test_monotonic_align.py  test_multilingual_inference.py  test_multispeaker_transfer.py  test_ort_utils.py  test_performance.py  test_phonemize.py  test_phonemizer_registry.py  test_piper_plus_api.py  test_piper_plus_engine.py  test_pqmf.py  test_prosody_extraction.py  test_pytorch_onnx_parity.py  test_speaker_balanced_sampler.py  test_speaker_embedding.py  test_stft_loss.py  test_stft_onnx.py  test_swedish_m1_1_m1_2.py  test_swedish_phonemizer.py  (+8 more)
src/python_stub/: README.md  pyproject.toml
src/rust/: Cargo.toml
src/rust/piper-cli/: Cargo.toml
src/rust/piper-cli/src/: main.rs
src/rust/piper-core/: Cargo.toml
src/rust/piper-core/src/: audio.rs  audio_format.rs  batch.rs  config.rs  device.rs  dictionary_manager.rs  engine.rs  error.rs  gpu.rs  input.rs  lib.rs  model_download.rs  playback.rs  short_text.rs  speaker_encoder.rs  ssml.rs  streaming.rs  text_splitter.rs  timing.rs  voice.rs  wasm.rs
src/rust/piper-core/tests/: test_audio_format.rs  test_batch.rs  test_chinese.rs  test_custom_dict.rs  test_custom_dict_integration.rs  test_default_output.rs  test_device.rs  test_english.rs  test_error_variants.rs  test_g2p_golden.rs  test_gpu.rs  test_japanese_phonemize.rs  test_korean.rs  test_model_download.rs  test_multilingual.rs  test_n_variants.rs  test_phoneme_converter.rs  test_question_markers.rs  test_romance_languages.rs  test_speaker_encoder_golden.rs  test_streaming.rs  test_swedish_integration.rs  test_text_splitter.rs  test_timing.rs  test_token_map_parity.rs  test_voice_api.rs
src/rust/piper-plus-g2p/: Cargo.toml  README.md  THIRD_PARTY_LICENSES.md
src/rust/piper-plus-g2p/src/: chinese.rs  custom_dict.rs  encode.rs  english.rs  error.rs  (+11 more)
src/rust/piper-python/: Cargo.toml  pyproject.toml
src/rust/piper-wasm/: Cargo.toml
(+728 files in other folders)
